man_MANS = \
  gnunet-arm.1 \
  gnunet-directory.1 \
  gnunet-download.1 \
  gnunet-download-manager.1 \
  gnunet-fs.1 \
  gnunet-nat-server.1 \
  gnunet-peerinfo.1 \
  gnunet-pseudonym.1 \
  gnunet-publish.1 \
  gnunet-search.1 \
  gnunet-statistics.1 \
  gnunet-transport.1 \
  gnunet-unindex.1 \
  gnunet-vpn.1

EXTRA_DIST = ${man_MANS}
